# eutelescope

./: .clang-format  .gitignore  .travis.yml  111_EUTelescope_has_moved_to_GitHub!!  BuildSetup.cmake  CMakeLists.txt  CONTRIBUTING.md  CTestConfig.cmake  CTestCustom.cmake.in  EUTel.vcxproj  EUTel.vcxproj.filters  EUTelTestFitter.geom  EutelescopeConfig.cmake.in  README  README.md  README.release_notes  README.release_procedure  README.tests  build_env.sh  iterativeAlignment.sh  iterativeAlignment_mine.sh  test.txt  tmp.txt
GBLExample/: iterativeAlignment.sh
cmake/: FindALLPIX.cmake  FindEUDAQ.cmake  FindEigen2.cmake  FindEigen3.cmake  FindG4.cmake  FindGBL.cmake  FindILCSOFT_CMAKE_MODULES.cmake  FindXERCESC.cmake  MacroAddSharedLibrary.cmake  MacroCheckPackageLibs.cmake  MacroCheckPackageVersion.cmake  MacroDisplayStandardVariables.cmake  MacroInstallDirectory.cmake  ilcsoft_default_settings.cmake
config/: config.cfg
ctest/: CMakeLists.txt  make_output_dir_structure.sh
ctest/aconite-4chipLocal_test/: test_01-1_geoboxinitialisation.conf  test_01-2_advancedgeometry.conf  test_01-3_noisypixel_m26.conf  test_02-fullconverter.conf  test_03-1_readnoisypixel_m26.conf  test_03-2_readnoisypixel_apix.conf  test_03-3_clustercount_m26.conf  test_03-4_clustercount_apix.conf  test_03-5_noisyclustermasker_m26.conf  test_03-6_noisyclusterremover_m26.conf  test_03-7_noisyclusterremover_apix.conf  test_04-fullclustering.conf  test_05-1_prealigner.conf  test_05-2_correlator.conf  test_06-fullhitmaker.conf  test_07-1_daf_scatter_init.conf  test_07-2_daf_setup_init.conf  test_07-3_daf_track_count.conf  test_07-4_mille_track_accept.conf  test_07-5_pede_call.conf  test_07-6_pede_result.conf  test_08_fullalign.conf  test_09-1_daf_setup_init.conf  test_09-2_daf_track_count.conf  test_09-3_daf_track_stats.conf
ctest/gbl_local_test/: test_01-1_noisypixel_m26.conf  test_02-fullconverter.conf  test_03-1_clustercount_m26.conf  test_04-fullclustering.conf  test_05-1_prealigner.conf  test_05-2_correlator.conf  test_06-fullhitmaker.conf  test_07-1_track_count_first_iteration.conf  test_07-2_pede_first_iteration.conf  test_07-3_track_count_second_iteration.conf  test_07-4_pede_second_iteration.conf
doc/: CMakeLists.txt  ChangeLog  Doxyfile  complete_20100610.cfg  introduction.html
doc/user-guide/: .gitignore  EUTelUserGuide.aux  EUTelUserGuide.fdb_latexmk  EUTelUserGuide.fls  EUTelUserGuide.out  EUTelUserGuide.tex  EUTelUserGuide.toc
doc/user-guide/_minted-EUTelUserGuide/: 00DAA807218EE250E4D1D69742D581E7AE0D0457FC0415A6663783E4D1F061E3.pygtex  00E754F4D5A0673DE3B24B9246DEE685AE0D0457FC0415A6663783E4D1F061E3.pygtex  048CD5C814EBADE196123D54C333942FAE0D0457FC0415A6663783E4D1F061E3.pygtex  085C7813C45ABDCC331D0AADF1C94D99AE0D0457FC0415A6663783E4D1F061E3.pygtex  096C7E53142F9F9B932FFD4422529271AE0D0457FC0415A6663783E4D1F061E3.pygtex  19283CF21B0ACE0C27C61C40475FD3FFAE0D0457FC0415A6663783E4D1F061E3.pygtex  1B96ECFF11C528E0ED212E3F8F3E41A2AE0D0457FC0415A6663783E4D1F061E3.pygtex  22B51D6310B30B925097C801ED630073AE0D0457FC0415A6663783E4D1F061E3.pygtex  22E6CE1E987744DB0940C8F46749E9E0AE0D0457FC0415A6663783E4D1F061E3.pygtex  23631A6201104EDC3C18BE2C87499820AE0D0457FC0415A6663783E4D1F061E3.pygtex  29AE5A77AF40C927E775E8BABCAA45E6AE0D0457FC0415A6663783E4D1F061E3.pygtex  2DE316E3A962AC3B4F49FBECD15A30C6AE0D0457FC0415A6663783E4D1F061E3.pygtex  2F77E97E4E27B4DE1760FFE99E25DAE4AE0D0457FC0415A6663783E4D1F061E3.pygtex  311B8E21C761B40179F6A5BC37ECA79EAE0D0457FC0415A6663783E4D1F061E3.pygtex  39530355829569F614FA5BB1E9645CBEAE0D0457FC0415A6663783E4D1F061E3.pygtex  3FF2D38FBC136BF29430434DF2D618B1AE0D0457FC0415A6663783E4D1F061E3.pygtex  4275260A358C36B4B5A5BF044C8118FFAE0D0457FC0415A6663783E4D1F061E3.pygtex  4C54543D83DCFA269A05D396122AA761AE0D0457FC0415A6663783E4D1F061E3.pygtex  4E24556FA4FE245A96C076DBEFB57412AE0D0457FC0415A6663783E4D1F061E3.pygtex  554B673F52BBD0F6A09596098B95B56AAE0D0457FC0415A6663783E4D1F061E3.pygtex  57474B217587D94F9C605C31C5E5C047AE0D0457FC0415A6663783E4D1F061E3.pygtex  5A61AA06B7768E8B2CD0861C46FB52B6AE0D0457FC0415A6663783E4D1F061E3.pygtex  5BD827E3937A18A6CC2D3593924E2485AE0D0457FC0415A6663783E4D1F061E3.pygtex  5C9D890D51D2CDBBF303051E63BF44D9AE0D0457FC0415A6663783E4D1F061E3.pygtex  5F0EDC0DEA4A44F788872695225595C4AE0D0457FC0415A6663783E4D1F061E3.pygtex  6A1B43672F56DFF403FA5776D4EF8DB6AE0D0457FC0415A6663783E4D1F061E3.pygtex  6C12851F0591D28E7841E6AD553ABAA6AE0D0457FC0415A6663783E4D1F061E3.pygtex  6D6D323CECF0A8A39935AF9527BF59D8AE0D0457FC0415A6663783E4D1F061E3.pygtex  775813F2F76620E481980400EDDFE252AE0D0457FC0415A6663783E4D1F061E3.pygtex  7C2640A39C742B2C6E2B3B4CD23E981FAE0D0457FC0415A6663783E4D1F061E3.pygtex  7E1620E30C95A83B163FFAD66DBCA4F0AE0D0457FC0415A6663783E4D1F061E3.pygtex  7F14E44CBBD4C06755645159FDBA0A6AAE0D0457FC0415A6663783E4D1F061E3.pygtex  82486542B44209AF3AD84EDE01D1E43AAE0D0457FC0415A6663783E4D1F061E3.pygtex  89599646FC0FB1F8E6F1D6F90D262556AE0D0457FC0415A6663783E4D1F061E3.pygtex  8E64474B7FAD704982F484FB676EBE15AE0D0457FC0415A6663783E4D1F061E3.pygtex  8F672B2C987175212D730DDA01459783AE0D0457FC0415A6663783E4D1F061E3.pygtex  910A327FB10A101B4BFE5AED1318900AAE0D0457FC0415A6663783E4D1F061E3.pygtex  914A4D5A93852DC723159A4BEB2E0A4CAE0D0457FC0415A6663783E4D1F061E3.pygtex  97FE5BFB8EDD3AC71FD2CBB24AFCEBE5AE0D0457FC0415A6663783E4D1F061E3.pygtex  9EDD8478FD8061D127DF5573E68702F2AE0D0457FC0415A6663783E4D1F061E3.pygtex  (+30 more)
include/: APIXFitter.h  AlibavaBaseHistogramMaker.h  AlibavaClusterCollectionMerger.h  AlibavaClustering.h  AlibavaConstantCommonModeCutProcessor.h  AlibavaConstantCommonModeProcessor.h  AlibavaCorrelator.h  AlibavaDataHistogramMaker.h  AlibavaEventImpl.h  AlibavaHitMaker.h  AlibavaMerger.h  AlibavaPedNoiCalIOManager.h  AlibavaPedestalNoiseProcessor.h  AlibavaRunHeaderImpl.h  AnalysisNoise.h  AnalysisPALPIDEfs.h  CMSPixelCalibrateEvent.h  CMSPixelClusterTuple.h  CMSPixelClusteringProcessor.h  CMSPixelDecoder.h  CMSPixelReader.h  CellIDReencoder.h  CrossSection.hpp  DEPFETReader.h  DEPFET_FR.h  DeadColumnFinder.h  EUTELESCOPE.h  EUTelAPIXApplyAlignment.h  EUTelAlign.h  (+223 more)
(+2464 files in other folders)
